deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: phomem-cosim
  name: phomem-cosim-service
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  - name: metrics
    port: 9090
    targetPort: 9090
  selector:
    app: phomem-cosim
  type: LoadBalancer
